# F95-Manager-cpp

./: .gitmodules  CMakeLists.txt  README.md
src/: logger.cpp  logger.hpp  main.cpp  types.hpp  ui_constants.hpp
src/app/: about_ui.hpp  app.cpp  app.hpp  auth_screen.hpp  cache.hpp  config.hpp  downloads.hpp  errors_ui.hpp  grid.hpp  logs_ui.hpp  main_screen.hpp  mod.hpp  runtime.hpp  state.hpp  update_ui.hpp
src/app/fetch/: fetch.hpp  helpers.hpp
src/app/settings/: migrate.hpp  settings.hpp  store.hpp  ui.hpp
src/app/settings/helpers/: fs_ops.hpp  helpers.hpp  open.hpp  paths.hpp  run.hpp
src/game_download/: game_download.hpp  mod.hpp
src/gui/: imgui_main.cpp
src/localization/: mod.hpp
src/localization/resources/: en.ftl  ru.ftl
src/parser/: mod.hpp  parser.hpp
src/parser/game_info/: hosting.hpp  mod.hpp  page.hpp  thread_meta.hpp  types.hpp
src/parser/game_info/link/: archive.hpp  direct.hpp  download.hpp  gofile.hpp  info.hpp  mod.hpp
src/tags/: mod.hpp  tags.json
src/views/: mod.hpp  ui_helpers.hpp  views.hpp
src/views/cards/: mod.hpp  render.hpp
src/views/cards/items/: card.hpp  cover_helpers.hpp  cover_hover.hpp  meta_row.hpp  mod.hpp  tags_panel.hpp
src/views/filters/: mod.hpp  render.hpp
src/views/filters/items/: discrete_slider.hpp  mod.hpp  mode_switch.hpp  picker.hpp  prefixes_menu.hpp  search_with_mode.hpp  segmented_panel.hpp  tags_menu.hpp
